# All Rights Reserved.  Use is subject to license terms.
# 
# See the file "license.terms" for information on usage and
# redistribution of this file, and for a DISCLAIMER OF ALL 
# WARRANTIES.
#

Change history for FreeTTS.
--------------------------
xxx Release 1.3
    - Move to Java 6
    - AudioPlayer can throw IOExceptions to give more meaningful debug hints

March, 9, 2009 Release 1.2.2:
    - Introduced an AliasDiphone class as a subclass of Diphone, which
      has a name and an original diphone; most API calls are just
      forwarded to the original diphone. (Marc Schroeder)
    - In text db files, introduced a new type of line, "ALIAS new
      old", where "old" is the name of an existing diphone (must have
      been defined higher-up in the text db file using the traditional
      "DIPHONE...." mechanism), and "new" is the new name under which
      the diphone is to be known additionally.
      DiphoneUnitDatabase.parseAndAdd () has been adapted accordingly.
      (Marc Schroeder)
    - In binary db files, introduced a new magic code identifying an
      alias diphone entry. Diphone.loadBinary() has been adapted
      accordingly. (Marc Schroeder)
    - Fixed "Class-Path" issue in manifest created by FestVoxToFreeTTS.
      (Willie Walker)
    - Fixed internal class loader problems (Dirk Schnelle-Walka)
    - using java logging library instead of system.out.println
    - separation into a core jar and a jsapi1.0 dependent jar
      (Dirk Schnelle-Walka)
    - Bugfixes in JavaClipAudioPlayer ((Dirk Schnelle-Walka):
      Catching runtime exceptions if the line is not available
      writing directly to the output line instead of buffering the data
    - some code cleanup (Dirk Schnelle-Walka)
    
March 10, 2005 Release 1.2.1
    - Add support for metrics important to screen readers
    - Add drain delay to clip audio player - the lack of
      it was causing the end of speech to be cut on JDS/Linux

February 06, 2005 Release 1.2 (final)