@@ -11,6 +11,7 @@ Change history for FreeTTS.
 xxx Release 1.3
     - Move to Java 6
     - AudioPlayer can throw IOExceptions to give more meaningful debug hints
+    - bugfix: src folder was not properly set in the zipped sources to deploy
 
 March, 9, 2009 Release 1.2.2:
     - Introduced an AliasDiphone class as a subclass of Diphone, which
